[package]
name = "brotocol-bonding-v1"
version = "1.0.0"
authors = ["block42"]
edition = "2018"
description = "A Bonding V1 contract for Brotocol"
repository = "https://github.com/block42-blockchain-company/brotocol-token-contracts"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.0" }
terra-cosmwasm = { version = "2.2.0" }
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
cw20 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
services = { path = "../../packages/services", default-features = false, version = "1.0.0" }
astroport = "1.0.1"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
