[package]
name = "brotocol-mvp-treasury"
version = "1.0.0"
authors = ["block42"]
edition = "2018"
description = "A MVP-Treasury contract for Brotocol"
repository = "https://github.com/block42-blockchain-company/brotocol-token-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
services = { path = "../../packages/services", default-features = false, version = "1.0.0" }
terraswap = "2.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
