[package]
name = "brotocol-mvp-treasury"
version = "1.0.0"
authors = ["block42"]
edition = "2018"
description = "A MVP-Treasury contract for Brotocol"
repository = "https://github.com/block42-blockchain-company/brotocol-token-contracts"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.0" }
terra-cosmwasm = { version = "2.2.0" }
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
cw20 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
services = { path = "../../packages/services", default-features = false, version = "1.0.0" }
terraswap = "2.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
